--- a/app_2.html
+++ b/app_2.html
@@ -133,7 +133,7 @@
   <div role="toolbar">
     <ul>
       <li><a href="app.html" data-icon="&#xe000;">1</a></li>
-      <li><a href="app_1.5.html" data-icon="&#xe006;">1.5</a></li>
+      <li><a href="app_1_5.html" data-icon="&#xe006;">1.5</a></li>
       <li><a class="active" href="app_2.html" data-icon="&#xe008;">2</a></li>
     </ul>
     <ul>
