--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     var supportHIDPI = false;
     var isFFOS = ("mozApps" in navigator && navigator.userAgent.search("Mobile") != -1);
 
-    if ( isFFOS ) {
+    /*if ( isFFOS ) {
       var URL = 'http://rnowm.github.io/icon-font-test/package/';
 
       if ( window.devicePixelRatio > 1.2 && supportHIDPI ) {
@@ -27,7 +27,8 @@
 
     } else {
       window.location.href = "app.html"
-    }
+    }*/
+
   </script>
 </head>
 <body>
