--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         console.log(this.error.name);
       };
 
-    } else {
+    } else {*/
       window.location.href = "app.html"
-    }*/
+    //}
 
   </script>
 </head>
