--- a/app.html
+++ b/app.html
@@ -93,38 +93,23 @@
 	
 
 	<script>
-	//resizing
-  function min_device_width() {
-    var match = window.matchMedia("(min-device-width: 320px)").matches;
-    var size = 320;
-
-    while (match) {
-      size++;
-      match = window.matchMedia("(min-device-width: "+size+"px)").matches
-    }
-    return size - 1;
-  }
 	var mobile = (navigator.userAgent.search("Mobile") != -1);
-	if ( mobile ) {
+	if ( !mobile ) {
       //var ww = window.innerWidth;
     	//var wh = window.innerHeight;
       //if potrait -> real with = window width
       //var realw = (ww/wh < 1) ? ww : wh;
 
       var pr = window.devicePixelRatio;
-      var realw = min_device_width() * pr;
+      var realw = window.innerWidth * pr;
       var fs = realw / 32;
 
       document.getElementById("device-w").innerHTML = realw + 'px';
       document.getElementById("device-pr").innerHTML = pr;
-      document.getElementById("device-fs").innerHTML = fs;
-      
-      document.body.style.fontSize = fs + 'px';
-    } else {
-      document.getElementById("device-w").innerHTML = "not a phone!"
-      document.getElementById("device-pr").innerHTML = "not a phone!"
-    	document.getElementById("device-fs").innerHTML = "not a phone!"
-    }
+      document.getElementById("device-fs").innerHTML = fs + 'px';
+
+      document.documentElement.style.fontSize = fs + 'px';
+    } 
 	</script>
 </body>
 </html>
