--- a/app.html
+++ b/app.html
@@ -94,7 +94,7 @@
 
 	<script>
 	var mobile = (navigator.userAgent.search("Mobile") != -1);
-	if ( !mobile ) {
+	if ( mobile ) {
       //var ww = window.innerWidth;
     	//var wh = window.innerHeight;
       //if potrait -> real with = window width
