--- a/app.html
+++ b/app.html
@@ -3,61 +3,6 @@
 <head>
 <title>Your Font/Glyphs</title>
 <link rel="stylesheet" href="style/style.css" />
-<link rel="stylesheet" href="style/toolbars.css" />
-<style>
-	html {font-size: 10px; }
-  section, header, footer {display: block;}
-	body {
-		font-family: sans-serif;
-		color: #444;
-		font-size: 10px;
-	}
-	* {
-		-moz-box-sizing: border-box;
-		-webkit-box-sizing: border-box;
-		box-sizing: border-box;
-		margin: 0;
-		padding: 0;
-	}
-	.glyph {
-		font-size: 3rem;
-		float: left;
-		text-align: center;
-		background: #eee;
-		box-shadow: inset 0 0 0 1px #f8f8f8, 0 0 0 1px #CCC;
-	}
-	.glyph input {
-		font-family: consolas, monospace;
-		font-size: 10px;
-		width: 100%;
-		text-align: center;
-		border: 0;
-		box-shadow: 0 0 0 1px #ccc;
-		padding: .125em;
-	}
-	.w-main {
-	}
-	.centered {
-		margin-left: auto;
-		margin-right: auto;
-	}
-
-	a, a:visited {
-		color: #B35047;
-		text-decoration: none;
-	}
-	a:hover, a:focus {color: #000;}
-	.box1 {
-		font-size: 10px;
-		display: inline-block;
-		width: 15em;
-		padding: .25em .5em;
-		background: #eee;
-		margin: .5em 1em .5em 0;
-	}
-  h3 { margin: 20px; font-size: 1.6rem; }
-  .fs1 { margin-top: 20px; }
-</style>
 </head>
 <body>
   <h3>Screen width: <span id="device-w">Not</span></h3>
@@ -67,39 +12,45 @@
 	<section class="mtm clearfix" id="glyphs">
 
 	<div class="glyph">
-    <div class="fs1" aria-hidden="true" data-icon="&#xe000;"></div>
-    <input type="text" readonly="readonly" value="&amp;#xe000;" />
+    <div class="fs1" data-icon="&#xe000;"></div>
   </div>
   <div class="glyph">
-    <div class="fs1" aria-hidden="true" data-icon="&#xe001;"></div>
-    <input type="text" readonly="readonly" value="&amp;#xe001;" />
+    <div class="fs1" data-icon="&#xe001;"></div>
   </div>
   <div class="glyph">
-    <div class="fs1" aria-hidden="true" data-icon="&#xe002;"></div>
-    <input type="text" readonly="readonly" value="&amp;#xe002;" />
+    <div class="fs1" data-icon="&#xe002;"></div>
   </div>
   <div class="glyph">
-    <div class="fs1" aria-hidden="true" data-icon="&#xe003;"></div>
-    <input type="text" readonly="readonly" value="&amp;#xe003;" />
+    <div class="fs1" data-icon="&#xe003;"></div>
   </div>
   <div class="glyph">
-    <div class="fs1" aria-hidden="true" data-icon="&#xe004;"></div>
-    <input type="text" readonly="readonly" value="&amp;#xe004;" />
+    <div class="fs1" data-icon="&#xe004;"></div>
   </div>
   <div class="glyph">
-    <div class="fs1" aria-hidden="true" data-icon="&#xe005;"></div>
-    <input type="text" readonly="readonly" value="&amp;#xe005;" />
+    <div class="fs1" data-icon="&#xe005;"></div>
   </div>
 	
 
 	<script>
-	var mobile = (navigator.userAgent.search("Mobile") != -1);
-	if ( mobile ) {
-      var ww = window.innerWidth;
-    	var wh = window.innerHeight;
+  	var mobile = (navigator.userAgent.search("Mobile") != -1);
+  	if ( mobile ) {
+      //resizing
+      function min_device_width() {
+        var match = window.matchMedia("(min-device-width: 320px)").matches;
+        var size = 320;
+
+        while (match) {
+          size++;
+          match = window.matchMedia("(min-device-width: "+size+"px)").matches
+        }
+        return size - 1;
+      }
+      //var ww = window.innerWidth;
+    	//var wh = window.innerHeight;
       var pr = window.devicePixelRatio;
       //if potrait -> real with = window width
-      var realw = (ww/wh < 1) ? ww * pr : wh * pr;
+      //var realw = (ww/wh < 1) ? ww * pr : wh * pr;
+      var realw = min_device_width() * pr;
       var fs = realw / 32;
 
       document.getElementById("device-w").innerHTML = realw + 'px';
