removed resetting html font-size

--- a/app.html
+++ b/app.html
@@ -75,7 +75,8 @@
       document.getElementById("device-pr").innerHTML = pr;
       document.getElementById("device-fs").innerHTML = fs + 'px';
 
-      document.documentElement.style.fontSize = fs + 'px';
+      //Set html font-size
+      /* document.documentElement.style.fontSize = fs + 'px'; */
     } 
 	</script>
 </body>
