removed "if ( mobile )"

--- a/app.html
+++ b/app.html
@@ -52,7 +52,7 @@
 	
 	<script>
   	var mobile = (navigator.userAgent.search("Mobile") != -1);
-  	if ( !mobile ) {
+  	//if ( mobile ) {
       //resizing
       /*function min_device_width() {
         var match = window.matchMedia("(min-device-width: 320px)").matches;
@@ -76,7 +76,7 @@
 
       //Set html font-size
       /* document.documentElement.style.fontSize = fs + 'px'; */
-    } 
+    //} 
 	</script>
 </body>
 </html>
