--- a/app.html
+++ b/app.html
@@ -3,81 +3,300 @@
 <head>
 <title>Icon font test</title>
 <link rel="stylesheet" href="style/style.css" />
+<link rel="stylesheet" href="style/icons.css" />
 <link rel="stylesheet" href="style/headers.css" />
 <link rel="stylesheet" href="style/lists.css" />
-<link rel="stylesheet" href="style/toolbars.css" />
 </head>
 <body>
 
   <section role="region">
     <header>
-      <menu type="toolbar">
-        <a href="#"><span class="icon" data-icon="&#xe000;">edit</span></a>
-        <a href="#"><span class="icon" data-icon="&#xe001;">delete</span></a>
-      </menu>
       <h1>Icon font test</h1>
     </header>
   </section>
 
   <section data-type="list">
-    <header>Device info</header>
     <ul>
       <li>
-        <p>Screen width</p>
-        <p id="device-w"></p>
+        <aside class="icon icon-wifi-info"></aside>
+        <p>icon-wifi-info</p>
       </li>
       <li>
-        <p>Pixel ratio</p>
-        <p id="device-pr"></p>
+        <aside class="icon icon-sim-card"></aside>
+        <p>icon-sim-card</p>
+        <p>icon-sim</p>
       </li>
       <li>
-        <p>Font size</p>
-        <p id="device-fs"></p>
+        <aside class="icon icon-radio"></aside>
+        <p>icon-radio</p>
+      </li>
+      <li>
+        <aside class="icon icon-camera"></aside>
+        <p>icon-camera</p>
+      </li>
+      <li>
+        <aside class="icon icon-geolocation"></aside>
+        <p>icon-geolocation</p>
+      </li>
+      <li>
+        <aside class="icon icon-data-e"></aside>
+        <p>icon-data-e</p>
+      </li>
+      <li>
+        <aside class="icon icon-data-h"></aside>
+        <p>icon-data-h</p>
+      </li>
+      <li>
+        <aside class="icon icon-data-o"></aside>
+        <p>icon-data-o</p>
+      </li>
+      <li>
+        <aside class="icon icon-data"></aside>
+        <p>icon-data</p>
+      </li>
+      <li>
+        <aside class="icon icon-airplane-mode"></aside>
+        <p>icon-airplane-mode</p>
+        <p>icon-airplane</p>
+      </li>
+      <li>
+        <aside class="icon icon-wifi"></aside>
+        <p>icon-wifi</p>
+      </li>
+      <li>
+        <aside class="icon icon-low-storage"></aside>
+        <p>icon-low-storage</p>
+        <p>icon-storage-low</p>
+      </li>
+      <li>
+        <aside class="icon icon-bloetooth"></aside>
+        <p>icon-bloetooth</p>
+        <p>icon-bluetooth</p>
+      </li>
+      <li>
+        <aside class="icon icon-bluetooth-transfer"></aside>
+        <p>icon-bluetooth-transfer</p>
+      </li>
+      <li>
+        <aside class="icon icon-download"></aside>
+        <p>icon-download</p>
+      </li>
+      <li>
+        <aside class="icon icon-agenda-view"></aside>
+        <p>icon-agenda-view</p>
+        <p>icon-view-agenda</p>
+      </li>
+      <li>
+        <aside class="icon icon-day-view"></aside>
+        <p>icon-day-view</p>
+        <p>icon-view-day</p>
+      </li>
+      <li>
+        <aside class="icon icon-week-view"></aside>
+        <p>icon-week-view</p>
+        <p>icon-view-week</p>
+      </li>
+      <li>
+        <aside class="icon icon-month-view"></aside>
+        <p>icon-month-view</p>
+        <p>icon-view-month</p>
+      </li>
+      <li>
+        <aside class="icon icon-today-go-to"></aside>
+        <p>icon-today-go-to</p>
+        <p>icon-go-today</p>
+      </li>
+      <li>
+        <aside class="icon icon-attachments"></aside>
+        <p>icon-attachments</p>
+      </li>
+      <li>
+        <aside class="icon icon-sms"></aside>
+        <p>icon-sms</p>
+      </li>
+      <li>
+        <aside class="icon icon-share"></aside>
+        <p>icon-share</p>
+      </li>
+      <li>
+        <aside class="icon icon-reload"></aside>
+        <p>icon-reload</p>
+      </li>
+      <li>
+        <aside class="icon icon-sync"></aside>
+        <p>icon-sync</p>
+      </li>
+      <li>
+        <aside class="icon icon-flag"></aside>
+        <p>icon-flag</p>
+      </li>
+      <li>
+        <aside class="icon icon-forward-message"></aside>
+        <p>icon-forward-message</p>
+        <p>icon-forward</p>
+      </li>
+      <li>
+        <aside class="icon icon-reply-all"></aside>
+        <p>icon-reply-all</p>
+      </li>
+      <li>
+        <aside class="icon icon-reply"></aside>
+        <p>icon-reply</p>
+      </li>
+      <li>
+        <aside class="icon icon-move"></aside>
+        <p>icon-move</p>
+      </li>
+      <li>
+        <aside class="icon icon-send"></aside>
+        <p>icon-send</p>
+      </li>
+      <li>
+        <aside class="icon icon-compose"></aside>
+        <p>icon-compose</p>
+      </li>
+      <li>
+        <aside class="icon icon-user-account--headers"></aside>
+        <p>icon-user-account--headers</p>
+        <p>(duplicado: contacts)</p>
+      </li>
+      <li>
+        <aside class="icon icon-edit-contact"></aside>
+        <p>icon-edit-contact</p>
+        <p>icon-contacts-edit</p>
+      </li>
+      <li>
+        <aside class="icon icon-contacts"></aside>
+        <p>icon-contacts</p>
+      </li>
+      <li>
+        <aside class="icon icon-bookmarked"></aside>
+        <p>icon-bookmarked</p>
+        <p>icon-favorite-on</p>
+      </li>
+      <li>
+        <aside class="icon icon-bookmark-favorite"></aside>
+        <p>icon-bookmark-favorite</p>
+        <p>icon-favorite-off</p>
+      </li>
+      <li>
+        <aside class="icon icon-forward-browser"></aside>
+        <p>icon-forward-browser</p>
+        <p>icon-browser-forward</p>
+      </li>
+      <li>
+        <aside class="icon icon-back-browser"></aside>
+        <p>icon-back-browser</p>
+        <p>icon-browser-back</p>
+      </li>
+      <li>
+        <aside class="icon icon-cut"></aside>
+        <p>icon-cut</p>
+      </li>
+      <li>
+        <aside class="icon icon-select-all"></aside>
+        <p>icon-select-all</p>
+      </li>
+      <li>
+        <aside class="icon icon-copy"></aside>
+        <p>icon-copy</p>
+      </li>
+      <li>
+        <aside class="icon icon-paste"></aside>
+        <p>icon-paste</p>
+      </li>
+      <li>
+        <aside class="icon icon-stop-alarm"></aside>
+        <p>icon-alarm-stop</p>
+        <p>icon-alarm-stop</p>
+      </li>
+      <li>
+        <aside class="icon icon-add-alarm"></aside>
+        <p>icon-add-alarm</p>
+        <p>icon-alarm-add</p>
+      </li>
+      <li>
+        <aside class="icon icon-snooze"></aside>
+        <p>icon-snooze</p>
+        <p>icon-alarm-snooze</p>
+      </li>
+      <li>
+        <aside class="icon icon-settings"></aside>
+        <p>icon-settings</p>
+      </li>
+      <li>
+        <aside class="icon icon-unlock"></aside>
+        <p>icon-unlock</p>
+      </li>
+      <li>
+        <aside class="icon icon-lock"></aside>
+        <p>icon-lock</p>
+      </li>
+      <li>
+        <aside class="icon icon-dismiss-keyboard"></aside>
+        <p>icon-dismiss-keyboard</p>
+      </li>
+      <li>
+        <aside class="icon icon-delete"></aside>
+        <p>icon-delete</p>
+      </li>
+      <li>
+        <aside class="icon icon-search"></aside>
+        <p>icon-search</p>
+      </li>
+      <li>
+        <aside class="icon icon-new-add"></aside>
+        <p>icon-new-add</p>
+        <p>icon-add (esta centrado?)</p>
+      </li>
+      <li>
+        <aside class="icon icon-forward-nav"></aside>
+        <p>icon-forward-nav</p>
+        <p>icon-nav-forward</p>
+      </li>
+      <li>
+        <aside class="icon icon-back-nav"></aside>
+        <p>icon-back-nav</p>
+        <p>icon-nav-back</p>
+      </li>
+      <li>
+        <aside class="icon icon-menu"></aside>
+        <p>icon-menu</p>
+      </li>
+      <li>
+        <aside class="icon icon-close"></aside>
+        <p>icon-close</p>
+      </li>
+      <li>
+        <aside class="icon icon-data-4g"></aside>
+        <p>icon-data-4g</p>
+      </li>
+      <li>
+        <aside class="icon icon-data-3g"></aside>
+        <p>icon-data-3g</p>
+      </li>
+      <li>
+        <aside class="icon icon-data-2g"></aside>
+        <p>icon-data-2g</p>
+      </li>
+      <li>
+        <aside class="icon icon-data-h-plus"></aside>
+        <p>icon-data-h-plus</p>
+      </li>
+      <li>
+        <aside class="icon icon-edit-list"></aside>
+        <p>icon-edit-list</p>
+        <p>icon-list-edit</p>
+      </li>
+      <li>
+        <aside class="icon icon-mark-read"></aside>
+        <p>icon-mark-read</p>
+      </li>
+      <li>
+        <aside class="icon icon-mark-unread"></aside>
+        <p>icon-mark-unread</p>
       </li>
     </ul>
   </section>
-
-  <div role="toolbar">
-    <ul>
-      <li><button class="icon-edit">Option 1</button></li>
-      <li><button class="icon-trash">Option 2</button></li>
-      <li><button class="icon-share">Option 3</button></li>
-      <li><button class="icon-grid">Option 4</button></li>
-      <li><button class="icon-camera">Option 5</button></li>
-      <li><button class="icon-box">Option 6</button></li>
-    </ul>
-    <ul></ul>
-  </div>
-	
-	<script>
-  	var mobile = (navigator.userAgent.search("Mobile") != -1);
-  	if ( mobile ) {
-      //resizing
-      function min_device_width() {
-        var match = window.matchMedia("(min-device-width: 320px)").matches;
-        var size = 320;
-
-        while (match) {
-          size++;
-          match = window.matchMedia("(min-device-width: "+size+"px)").matches
-        }
-        return size - 1;
-      }
-      //var ww = window.innerWidth;
-    	//var wh = window.innerHeight;
-      var pr = window.devicePixelRatio;
-      //if potrait -> real with = window width
-      //var realw = (ww/wh < 1) ? ww * pr : wh * pr;
-      var realw = min_device_width() * pr;
-      var fs = realw / 32;
-
-      document.getElementById("device-w").innerHTML = realw + 'px';
-      document.getElementById("device-pr").innerHTML = pr;
-      document.getElementById("device-fs").innerHTML = fs + 'px';
-
-      //Set html font-size
-      /* document.documentElement.style.fontSize = fs + 'px'; */
-    } 
-	</script>
 </body>
 </html>
