Added status bar examples

--- a/app.html
+++ b/app.html
@@ -12,6 +12,9 @@
 
   <section role="region">
     <header>
+      <menu type="toolbar">
+        <a href="status.html"><span>Status bar</span></a>
+      </menu>
       <h1>Icon font test</h1>
     </header>
   </section>
