--- a/app.html
+++ b/app.html
@@ -42,7 +42,6 @@
       <li>
         <aside class="icon icon-geolocation"></aside>
         <p>icon-geolocation</p>
-        <p>duplicado</p>
       </li>
       <li>
         <aside class="icon icon-data-e"></aside>
@@ -462,14 +461,17 @@
       <li>
         <aside class="icon icon-status-signal-rectangles"></aside>
         <p>icon-status-signal-rectangles</p>
+        <p>Alineado por abajo con signal</p>
       </li>
       <li>
         <aside class="icon icon-status-signal-no2"></aside>
         <p>icon-status-signal-no2</p>
+        <p>icon-status-x-right</p>
       </li>
       <li>
         <aside class="icon icon-status-signal-no"></aside>
         <p>icon-status-signal-no</p>
+        <p>icon-status-x-top</p>
       </li>
       <li>
         <aside class="icon icon-status-signal-full"></aside>
@@ -494,6 +496,7 @@
       <li>
         <aside class="icon icon-status-airplane-cross"></aside>
         <p>icon-status-airplane-cross</p>
+        <p>icon-status-x-left</p>
       </li>
       <li>
         <aside class="icon icon-status-airplane"></aside>
@@ -502,6 +505,7 @@
       <li>
         <aside class="icon icon-status-battery-load"></aside>
         <p>icon-status-battery-load</p>
+        <p>icon-status-battery-charging</p>
       </li>
       <li>
         <aside class="icon icon-status-battery-ask"></aside>
@@ -510,6 +514,7 @@
       <li>
         <aside class="icon icon-status-battery-empty"></aside>
         <p>icon-status-battery-empty</p>
+        <p>icon-status-battery</p>
       </li>
     </ul>
 
